tests/ui/tuple-struct.stderr
error: TypeStateBuilder only supports structs with named fields
 --> tests/ui/tuple-struct.rs:5:1
  |
5 | struct TupleStruct(String, u32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
